- fix invisible isso avatars

--- a/css/aboutReader/aboutReaderContent.css
+++ b/css/aboutReader/aboutReaderContent.css
@@ -93,7 +93,7 @@ a:active {
 
 * {
   max-width: 100%;
-  height: auto;
+  /*height: auto;*/
 }
 
 p,
